css/styles.css
html {
    overflow: scroll;
    overflow-x: hidden;
    scrollbar-width: none;
}

#noMobile {
	display: flex;
	align-items: center;
	justify-content: center;
    background-color: black;
	
	position: fixed;
	z-index: 100;
	top: 0;
	left: 0;
	right: 0;
    bottom: 0;	
    display: none;
}

body {
    font-family: 'Alatsi', sans-serif;
    font-weight: 100;
    background-color: black;
    color: white;

    scroll-snap-type: y proximity;
    scroll-snap-points-y: repeat(100vh);
    overflow-y: scroll;
}

.container {
    scroll-snap-align: start;
    height: 100vh;
    width: 100vw;
    position: relative;
    padding: 0px;
    margin: auto;
    display: flex;
    flex-direction: column;
    z-index: 1;
}

.canvas{
    height: 100vh;
    width: 100vw;   
    position: fixed;
    top: 0px;
    z-index: -1;
}

#img-hover{
    width: 180px;
    height: 180px;
    margin: auto;
    margin-bottom: 0px;
    border: 6px #00629B solid;
    border-radius: 50%;
    overflow: hidden;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.main-container h1{
    font-family: 'Raleway', sans-serif;
    font-weight: 600;
    color: white;
    font-size: 80px;
    margin: auto;
    margin-top: 4vh;
    margin-bottom: 10vh;
}

.goDown {
    z-index: 2;
    padding: 10px;
    height: 40px;
    background-color: #00629B;
    border: 1px white solid;
    border-radius: 50%;
    margin: auto;
    margin-top: 20px;
    margin-bottom: 20px;
}



.sub-title{
    color: white;
    margin: auto;
    /* margin-top: 120px; */
    margin-bottom: 40px;
    border-bottom: 30px #00629B solid;
    font-size: 80px;
    line-height: 30px;
}

.what1 {
    grid-area: w;
    color: #ed5565;
    font-size: 40px;
}

.what2 {
    grid-area: ml;
    color: #1ab394;
    font-size: 40px;
}

.what3 {
    grid-area: e;
    color: #f8ac59;
    font-size: 40px;
}

.whatIDo-grid{
    margin: auto;
    margin-top: 40px;
    display: grid;
    grid-template-areas: 
    'w ml e';
    grid-gap: 20px;
    font-size: 30px;
    font-weight: 200;
    text-align: center;
    justify-content: center;
}

.what-hover {
    transition-duration: 1s;
}

.what-hover:hover {
    font-size: 50px;
}

.love1 {
    grid-area: js;
    width: 150px;
}

.love2 {
    grid-area: mongo;
    width: 250px;
}

.love3 {
    grid-area: nodejs;
    width: 150px;
}

.love4 {
    grid-area: fire;
    width: 100px;
}

.love5 {
    grid-area: react;
    width: 180px;
}

.love6 {
    grid-area: django;
    width: 250px;
}

.love-grid {
    margin: auto;
    margin-top: 40px;
    display: grid;
    grid-template-areas: 
    'js mongo nodejs'
    'react django fire';
    grid-gap: 80px 100px;
    font-size: 30px;
    font-weight: 200;
    text-align: center;
    justify-content: center;
}

.lang1 {
    grid-area: jsLang;
    width: 150px;
}

.lang2 {
    grid-area: python;
    width: 150px;
}

.lang3 {
    grid-area: css;
    width: 150px;
}

.lang4 {
    grid-area: html;
    width: 150px;
}

.lang5 {
    grid-area: c;
    width: 180px;
}

.lang6 {
    grid-area: cpp;
    width: 150px;
}

.lang-grid {
    margin: auto;
    margin-top: 40px;
    display: grid;
    grid-template-areas: 
    'jsLang python cpp'
    'c html css';
    grid-gap: 80px 100px;
    font-size: 30px;
    font-weight: 200;
    text-align: center;
    justify-content: center;
}

.work1 {
    grid-area: wOne;
    width: 350px;
}

.work2 {
    grid-area: wTwo;
    width: 350px;
}

.work3 {
    grid-area: wThree;
    width: 350px;
}

.work-grid {
    margin: auto;
    margin-top: 40px;
    display: grid;
    grid-template-areas: 
    "wTwo wOne wThree";
    grid-gap: 80px 50px;
    font-size: 30px;
    font-weight: 200;
    text-align: center;
    justify-content: center;
}

.card {
    background-color: black;
    margin: 0px !important;
    height: auto;
}

.card-content {
    padding: 10px !important;
    height: auto;
}

.card-title {
    color: white !important;
    text-align: start;
    font-size: 36px !important;
    justify-content: start;
}

.card-reveal {
    background-color: #00629B !important;
    padding: 5px;
}

.card-reveal p {
    margin: 0px !important;
    font-size: 18px;
}

.con1 {
    grid-area: link;
    text-decoration: none;
    border: none;
    outline: none;
}

.con2 {
    grid-area: med;
    text-decoration: none;
    border: none;
    outline: none;
}

.con3 {
    grid-area: insta;
    text-decoration: none;
    border: none;
    outline: none;
}

.con4 {
    grid-area: face;
    text-decoration: none;
    border: none;
    outline: none;
}

.con-image {
    width: 100px;
    transition-duration: 1s;
}

.con-image:hover {
    width: 110px;
}

.connect-grid {
    margin: auto;
    margin-top: 40px;
    display: grid;
    grid-template-areas: 
    "link med insta face";
    grid-gap: 80px 50px;
    font-size: 30px;
    font-weight: 200;
    text-align: center;
    justify-content: center;
}

